c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/extra_credit/compound_assign_function_result.c
int foo(void) {
    return 2;
}

int main(void) {
    int x = 3;
    x -= foo();
    return x;
}