c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/assign_value_to_function.c
int main(void) {
    int x(void);
    x = 3;
    return 0;
}